Responsive Issues Fixed - On Mobile Devices

--- a/assets/css/dashboard-layout.css
+++ b/assets/css/dashboard-layout.css
@@ -59,9 +59,7 @@
     margin-top: 105px;
     margin-left: 0;
 }
-.sidebar-show {
-    margin-left: 0;
-}
+
 .sidebar-wrapper {
     position: relative;
 }
